# maze

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
assets/: rhb.png:Zone.Identifier
js/: main.js  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/wasm/: Cargo.toml
src/wasm/src/: browser.rs  common.rs  engine.rs  game.rs  lib.rs
src/wasm/src/game/: ghost.rs  map.rs  maze.rs  message.rs
src/wasm/src/game/maze/: wall.rs
src/wasm/tests/: app.rs
static/: main.css
